# cccp

./: .gitignore
cmake/: README.md
cmake/cond-build/: CMakeLists.txt  cmake.options.commissioning  cmake.options.debug  cmake.options.release  cond-build.c
cmake/selective-globbing/: CMakeLists.txt  README.md  wip.c  working-extra.c  working.c
cpp/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
cpp/G4SerDes/: CMakeLists.txt  G4SerDes.cpp  G4SerDes.h  G4SerDes.py
cpp/MyMath/: CMakeLists.txt  MyMath.h  mysqrt.cpp
doc/: mixedDevelopment.tex
python/: G4SerDes.py
